parser/gen/SBVRParser.js
// Generated from C:/Users/jleveau/WebstormProjects/sbvrParser/parser/grammar\SBVR.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var grammarFileName = "SBVR.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, "','", "'not'", "'and'", "'or'", 
                     null, "'be'", "'false'", "'true'", "'that'", "'.'", 
                     "'must'", "'each'", "'some'", "'no'", "'a'", "'of'", 
                     null, "'is equal to'", "'is lesser than'", "'is greater than'", 
                     "'before'", "'after'" ];

var symbolicNames = [ null, "SKIPED", "LINE_JOINING", "COMA", "NOT", "AND", 
                      "OR", "IS_IN", "BE", "FALSE", "TRUE", "THAT", "DOT", 
                      "OBLIGATION", "EACH", "SOME", "NO", "A", "OF", "MATCHES", 
                      "EQUAL", "LESSER_THAN", "GREATER_THAN", "BEFORE", 
                      "AFTER", "HAVE", "QUOTED_CONTENT", "IDENTIFIER", "WHITESPACE" ];

var ruleNames =  [ "regex", "date_value", "numeric_value", "boolean_value", 
                   "is_in", "be", "matches", "have", "equal", "lesser_than", 
                   "greater_than", "before", "after", "and", "or", "not", 
                   "binary_logical_op", "unary_logical_op", "constraint_operator", 
                   "constraint_operation", "unary_expr", "binary_expr", 
                   "constraint", "term", "attribut_specifier", "constraint_specifier", 
                   "specifier", "a", "no", "some", "each", "quantifier", 
                   "quantified_context", "context", "obligation", "modality", 
                   "business_rule", "business_rules", "main" ];

function SBVRParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

SBVRParser.prototype = Object.create(antlr4.Parser.prototype);
SBVRParser.prototype.constructor = SBVRParser;

Object.defineProperty(SBVRParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

SBVRParser.EOF = antlr4.Token.EOF;
SBVRParser.SKIPED = 1;
SBVRParser.LINE_JOINING = 2;
SBVRParser.COMA = 3;
SBVRParser.NOT = 4;
SBVRParser.AND = 5;
SBVRParser.OR = 6;
SBVRParser.IS_IN = 7;
SBVRParser.BE = 8;
SBVRParser.FALSE = 9;
SBVRParser.TRUE = 10;
SBVRParser.THAT = 11;
SBVRParser.DOT = 12;
SBVRParser.OBLIGATION = 13;
SBVRParser.EACH = 14;
SBVRParser.SOME = 15;
SBVRParser.NO = 16;
SBVRParser.A = 17;
SBVRParser.OF = 18;
SBVRParser.MATCHES = 19;
SBVRParser.EQUAL = 20;
SBVRParser.LESSER_THAN = 21;
SBVRParser.GREATER_THAN = 22;
SBVRParser.BEFORE = 23;
SBVRParser.AFTER = 24;
SBVRParser.HAVE = 25;
SBVRParser.QUOTED_CONTENT = 26;
SBVRParser.IDENTIFIER = 27;
SBVRParser.WHITESPACE = 28;

SBVRParser.RULE_regex = 0;
SBVRParser.RULE_date_value = 1;
SBVRParser.RULE_numeric_value = 2;
SBVRParser.RULE_boolean_value = 3;
SBVRParser.RULE_is_in = 4;
SBVRParser.RULE_be = 5;
SBVRParser.RULE_matches = 6;
SBVRParser.RULE_have = 7;
SBVRParser.RULE_equal = 8;
SBVRParser.RULE_lesser_than = 9;
SBVRParser.RULE_greater_than = 10;
SBVRParser.RULE_before = 11;
SBVRParser.RULE_after = 12;
SBVRParser.RULE_and = 13;
SBVRParser.RULE_or = 14;
SBVRParser.RULE_not = 15;
SBVRParser.RULE_binary_logical_op = 16;
SBVRParser.RULE_unary_logical_op = 17;
SBVRParser.RULE_constraint_operator = 18;
SBVRParser.RULE_constraint_operation = 19;
SBVRParser.RULE_unary_expr = 20;
SBVRParser.RULE_binary_expr = 21;
SBVRParser.RULE_constraint = 22;
SBVRParser.RULE_term = 23;
SBVRParser.RULE_attribut_specifier = 24;
SBVRParser.RULE_constraint_specifier = 25;
SBVRParser.RULE_specifier = 26;
SBVRParser.RULE_a = 27;
SBVRParser.RULE_no = 28;
SBVRParser.RULE_some = 29;
SBVRParser.RULE_each = 30;
SBVRParser.RULE_quantifier = 31;
SBVRParser.RULE_quantified_context = 32;
SBVRParser.RULE_context = 33;
SBVRParser.RULE_obligation = 34;
SBVRParser.RULE_modality = 35;
SBVRParser.RULE_business_rule = 36;
SBVRParser.RULE_business_rules = 37;
SBVRParser.RULE_main = 38;

function RegexContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_regex;
    return this;
}

RegexContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RegexContext.prototype.constructor = RegexContext;

RegexContext.prototype.QUOTED_CONTENT = function() {
    return this.getToken(SBVRParser.QUOTED_CONTENT, 0);
};




SBVRParser.RegexContext = RegexContext;

SBVRParser.prototype.regex = function() {

    var localctx = new RegexContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, SBVRParser.RULE_regex);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 78;
        this.match(SBVRParser.QUOTED_CONTENT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Date_valueContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_date_value;
    return this;
}

Date_valueContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Date_valueContext.prototype.constructor = Date_valueContext;

Date_valueContext.prototype.IDENTIFIER = function() {
    return this.getToken(SBVRParser.IDENTIFIER, 0);
};




SBVRParser.Date_valueContext = Date_valueContext;

SBVRParser.prototype.date_value = function() {

    var localctx = new Date_valueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, SBVRParser.RULE_date_value);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 80;
        this.match(SBVRParser.IDENTIFIER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Numeric_valueContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_numeric_value;
    return this;
}

Numeric_valueContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Numeric_valueContext.prototype.constructor = Numeric_valueContext;

Numeric_valueContext.prototype.IDENTIFIER = function() {
    return this.getToken(SBVRParser.IDENTIFIER, 0);
};




SBVRParser.Numeric_valueContext = Numeric_valueContext;

SBVRParser.prototype.numeric_value = function() {

    var localctx = new Numeric_valueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, SBVRParser.RULE_numeric_value);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 82;
        this.match(SBVRParser.IDENTIFIER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Boolean_valueContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_boolean_value;
    return this;
}

Boolean_valueContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Boolean_valueContext.prototype.constructor = Boolean_valueContext;

Boolean_valueContext.prototype.IDENTIFIER = function() {
    return this.getToken(SBVRParser.IDENTIFIER, 0);
};




SBVRParser.Boolean_valueContext = Boolean_valueContext;

SBVRParser.prototype.boolean_value = function() {

    var localctx = new Boolean_valueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, SBVRParser.RULE_boolean_value);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this.match(SBVRParser.IDENTIFIER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Is_inContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_is_in;
    return this;
}

Is_inContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Is_inContext.prototype.constructor = Is_inContext;

Is_inContext.prototype.IS_IN = function() {
    return this.getToken(SBVRParser.IS_IN, 0);
};




SBVRParser.Is_inContext = Is_inContext;

SBVRParser.prototype.is_in = function() {

    var localctx = new Is_inContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, SBVRParser.RULE_is_in);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 86;
        this.match(SBVRParser.IS_IN);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_be;
    return this;
}

BeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BeContext.prototype.constructor = BeContext;

BeContext.prototype.BE = function() {
    return this.getToken(SBVRParser.BE, 0);
};




SBVRParser.BeContext = BeContext;

SBVRParser.prototype.be = function() {

    var localctx = new BeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, SBVRParser.RULE_be);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 88;
        this.match(SBVRParser.BE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MatchesContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_matches;
    return this;
}

MatchesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MatchesContext.prototype.constructor = MatchesContext;

MatchesContext.prototype.MATCHES = function() {
    return this.getToken(SBVRParser.MATCHES, 0);
};




SBVRParser.MatchesContext = MatchesContext;

SBVRParser.prototype.matches = function() {

    var localctx = new MatchesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, SBVRParser.RULE_matches);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 90;
        this.match(SBVRParser.MATCHES);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HaveContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_have;
    return this;
}

HaveContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HaveContext.prototype.constructor = HaveContext;

HaveContext.prototype.HAVE = function() {
    return this.getToken(SBVRParser.HAVE, 0);
};




SBVRParser.HaveContext = HaveContext;

SBVRParser.prototype.have = function() {

    var localctx = new HaveContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, SBVRParser.RULE_have);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 92;
        this.match(SBVRParser.HAVE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EqualContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_equal;
    return this;
}

EqualContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EqualContext.prototype.constructor = EqualContext;

EqualContext.prototype.EQUAL = function() {
    return this.getToken(SBVRParser.EQUAL, 0);
};




SBVRParser.EqualContext = EqualContext;

SBVRParser.prototype.equal = function() {

    var localctx = new EqualContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, SBVRParser.RULE_equal);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 94;
        this.match(SBVRParser.EQUAL);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Lesser_thanContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_lesser_than;
    return this;
}

Lesser_thanContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Lesser_thanContext.prototype.constructor = Lesser_thanContext;

Lesser_thanContext.prototype.LESSER_THAN = function() {
    return this.getToken(SBVRParser.LESSER_THAN, 0);
};




SBVRParser.Lesser_thanContext = Lesser_thanContext;

SBVRParser.prototype.lesser_than = function() {

    var localctx = new Lesser_thanContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, SBVRParser.RULE_lesser_than);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 96;
        this.match(SBVRParser.LESSER_THAN);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Greater_thanContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_greater_than;
    return this;
}

Greater_thanContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Greater_thanContext.prototype.constructor = Greater_thanContext;

Greater_thanContext.prototype.GREATER_THAN = function() {
    return this.getToken(SBVRParser.GREATER_THAN, 0);
};




SBVRParser.Greater_thanContext = Greater_thanContext;

SBVRParser.prototype.greater_than = function() {

    var localctx = new Greater_thanContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, SBVRParser.RULE_greater_than);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 98;
        this.match(SBVRParser.GREATER_THAN);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BeforeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_before;
    return this;
}

BeforeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BeforeContext.prototype.constructor = BeforeContext;

BeforeContext.prototype.BEFORE = function() {
    return this.getToken(SBVRParser.BEFORE, 0);
};




SBVRParser.BeforeContext = BeforeContext;

SBVRParser.prototype.before = function() {

    var localctx = new BeforeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, SBVRParser.RULE_before);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 100;
        this.match(SBVRParser.BEFORE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AfterContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_after;
    return this;
}

AfterContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AfterContext.prototype.constructor = AfterContext;

AfterContext.prototype.AFTER = function() {
    return this.getToken(SBVRParser.AFTER, 0);
};




SBVRParser.AfterContext = AfterContext;

SBVRParser.prototype.after = function() {

    var localctx = new AfterContext(this, this._ctx, this.state);
    this.enterRule(localctx, 24, SBVRParser.RULE_after);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 102;
        this.match(SBVRParser.AFTER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AndContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_and;
    return this;
}

AndContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AndContext.prototype.constructor = AndContext;

AndContext.prototype.AND = function() {
    return this.getToken(SBVRParser.AND, 0);
};




SBVRParser.AndContext = AndContext;

SBVRParser.prototype.and = function() {

    var localctx = new AndContext(this, this._ctx, this.state);
    this.enterRule(localctx, 26, SBVRParser.RULE_and);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 104;
        this.match(SBVRParser.AND);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function OrContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_or;
    return this;
}

OrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OrContext.prototype.constructor = OrContext;

OrContext.prototype.OR = function() {
    return this.getToken(SBVRParser.OR, 0);
};




SBVRParser.OrContext = OrContext;

SBVRParser.prototype.or = function() {

    var localctx = new OrContext(this, this._ctx, this.state);
    this.enterRule(localctx, 28, SBVRParser.RULE_or);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 106;
        this.match(SBVRParser.OR);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NotContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_not;
    return this;
}

NotContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NotContext.prototype.constructor = NotContext;

NotContext.prototype.NOT = function() {
    return this.getToken(SBVRParser.NOT, 0);
};




SBVRParser.NotContext = NotContext;

SBVRParser.prototype.not = function() {

    var localctx = new NotContext(this, this._ctx, this.state);
    this.enterRule(localctx, 30, SBVRParser.RULE_not);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 108;
        this.match(SBVRParser.NOT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Binary_logical_opContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_binary_logical_op;
    return this;
}

Binary_logical_opContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Binary_logical_opContext.prototype.constructor = Binary_logical_opContext;

Binary_logical_opContext.prototype.or = function() {
    return this.getTypedRuleContext(OrContext,0);
};

Binary_logical_opContext.prototype.and = function() {
    return this.getTypedRuleContext(AndContext,0);
};




SBVRParser.Binary_logical_opContext = Binary_logical_opContext;

SBVRParser.prototype.binary_logical_op = function() {

    var localctx = new Binary_logical_opContext(this, this._ctx, this.state);
    this.enterRule(localctx, 32, SBVRParser.RULE_binary_logical_op);
    try {
        this.state = 112;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case SBVRParser.OR:
            this.enterOuterAlt(localctx, 1);
            this.state = 110;
            this.or();
            break;
        case SBVRParser.AND:
            this.enterOuterAlt(localctx, 2);
            this.state = 111;
            this.and();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Unary_logical_opContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_unary_logical_op;
    return this;
}

Unary_logical_opContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Unary_logical_opContext.prototype.constructor = Unary_logical_opContext;

Unary_logical_opContext.prototype.not = function() {
    return this.getTypedRuleContext(NotContext,0);
};




SBVRParser.Unary_logical_opContext = Unary_logical_opContext;

SBVRParser.prototype.unary_logical_op = function() {

    var localctx = new Unary_logical_opContext(this, this._ctx, this.state);
    this.enterRule(localctx, 34, SBVRParser.RULE_unary_logical_op);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 114;
        this.not();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Constraint_operatorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_constraint_operator;
    return this;
}

Constraint_operatorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Constraint_operatorContext.prototype.constructor = Constraint_operatorContext;

Constraint_operatorContext.prototype.have = function() {
    return this.getTypedRuleContext(HaveContext,0);
};

Constraint_operatorContext.prototype.matches = function() {
    return this.getTypedRuleContext(MatchesContext,0);
};

Constraint_operatorContext.prototype.equal = function() {
    return this.getTypedRuleContext(EqualContext,0);
};

Constraint_operatorContext.prototype.lesser_than = function() {
    return this.getTypedRuleContext(Lesser_thanContext,0);
};

Constraint_operatorContext.prototype.greater_than = function() {
    return this.getTypedRuleContext(Greater_thanContext,0);
};

Constraint_operatorContext.prototype.before = function() {
    return this.getTypedRuleContext(BeforeContext,0);
};

Constraint_operatorContext.prototype.after = function() {
    return this.getTypedRuleContext(AfterContext,0);
};

Constraint_operatorContext.prototype.is_in = function() {
    return this.getTypedRuleContext(Is_inContext,0);
};




SBVRParser.Constraint_operatorContext = Constraint_operatorContext;

SBVRParser.prototype.constraint_operator = function() {

    var localctx = new Constraint_operatorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 36, SBVRParser.RULE_constraint_operator);
    try {
        this.state = 124;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case SBVRParser.HAVE:
            this.enterOuterAlt(localctx, 1);
            this.state = 116;
            this.have();
            break;
        case SBVRParser.MATCHES:
            this.enterOuterAlt(localctx, 2);
            this.state = 117;
            this.matches();
            break;
        case SBVRParser.EQUAL:
            this.enterOuterAlt(localctx, 3);
            this.state = 118;
            this.equal();
            break;
        case SBVRParser.LESSER_THAN:
            this.enterOuterAlt(localctx, 4);
            this.state = 119;
            this.lesser_than();
            break;
        case SBVRParser.GREATER_THAN:
            this.enterOuterAlt(localctx, 5);
            this.state = 120;
            this.greater_than();
            break;
        case SBVRParser.BEFORE:
            this.enterOuterAlt(localctx, 6);
            this.state = 121;
            this.before();
            break;
        case SBVRParser.AFTER:
            this.enterOuterAlt(localctx, 7);
            this.state = 122;
            this.after();
            break;
        case SBVRParser.IS_IN:
            this.enterOuterAlt(localctx, 8);
            this.state = 123;
            this.is_in();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Constraint_operationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SBVRParser.RULE_constraint_operation;
    return this;
}

Constraint_operationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Constraint_operationContext.prototype.constructor = Constraint_operationContext;
